[gd_scene load_steps=2 format=3 uid="uid://c6wy6xvn5lvl1"]

[ext_resource type="Script" path="res://Details Modules/EncounterDetailsDisplay.gd" id="1_ajyjh"]

[node name="Encounter Details" type="VBoxContainer"]
script = ExtResource("1_ajyjh")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer"]
custom_minimum_size = Vector2(130, 25)
layout_mode = 2
text = "Monster Details"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Terrain Label" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
text = "Terrain: "

[node name="Tier Label" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
text = "Tier: "

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Id Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 25)
layout_mode = 2
text = "ID:"

[node name="Name Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 25)
layout_mode = 2
text = "Name:"

[node name="Sorcery Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "Spirit:"

[node name="Health Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
text = "Health:"

[node name="Edit Button" type="Button" parent="."]
layout_mode = 2
text = "Edit Encounter"

[node name="Window" type="Window" parent="Edit Button"]
title = "Set Encounter"
initial_position = 1
size = Vector2i(200, 100)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="Edit Button/Window"]
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Edit Button/Window/VBoxContainer"]
custom_minimum_size = Vector2(100, 35)
layout_mode = 2
text = "Terrain:"

[node name="OptionButton" type="OptionButton" parent="Edit Button/Window/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "T7"
popup/item_0/id = 0
popup/item_1/text = "T6"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Edit Button/Window/VBoxContainer"]
layout_mode = 2

[node name="Fill Button" type="Button" parent="Edit Button/Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fill"

[node name="Accept Button" type="Button" parent="Edit Button/Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Accept"

[connection signal="pressed" from="Edit Button" to="." method="_prepare_set_encounter_window"]
[connection signal="close_requested" from="Edit Button/Window" to="Edit Button/Window" method="hide"]
[connection signal="pressed" from="Edit Button/Window/VBoxContainer/HBoxContainer/Fill Button" to="." method="_on_set_encounter_window_fill"]
[connection signal="pressed" from="Edit Button/Window/VBoxContainer/HBoxContainer/Fill Button" to="Edit Button/Window" method="hide"]
[connection signal="pressed" from="Edit Button/Window/VBoxContainer/HBoxContainer/Accept Button" to="." method="_on_set_encounter_window_accept"]
[connection signal="pressed" from="Edit Button/Window/VBoxContainer/HBoxContainer/Accept Button" to="Edit Button/Window" method="hide"]
